ASSERT(genChild->isListMarker() || genChild->style()->styleType() == FIRST_LETTER) triggered on flex-box content https://bugs.webkit.org/show_bug.cgi?id=91003

Reviewed by Abhishek Arya.

Source/WebCore:

Tests: fast/flexbox/assert-generated-deprecated-flexbox.html
       fast/flexbox/assert-generated-new-flexbox.html

The issue was that findBeforeAfterParent didn't return the right parent for the flex-box case. This would
make us update the wrong children (and not propagate the style updates properly).

* rendering/RenderObjectChildList.cpp:
(WebCore::findBeforeAfterParent):
Added a check for flex boxes (both deprecated and new).

LayoutTests:

* fast/flexbox/assert-generated-deprecated-flexbox-expected.txt: Added.
* fast/flexbox/assert-generated-deprecated-flexbox.html: Added.
* fast/flexbox/assert-generated-new-flexbox-expected.txt: Added.
* fast/flexbox/assert-generated-new-flexbox.html: Added.


Canonical link: https://commits.webkit.org/108976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122502 268f45cc-cd09-0410-ab3c-d52691b4dbfc